[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Combinator.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://scripts/Essence.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/light.png" type="Texture" id=4]
[ext_resource path="res://scripts/CombinationLight.gd" type="Script" id=5]

[node name="Combinator" type="Node2D"]
script = ExtResource( 1 )

[node name="MachineSprite" type="Sprite" parent="."]
position = Vector2( 521, 252 )
scale = Vector2( 14.0313, 7.125 )
texture = ExtResource( 2 )

[node name="Selector" type="Sprite" parent="."]
position = Vector2( 133, 444 )
texture = ExtResource( 2 )

[node name="SelectionPoints" type="Node" parent="."]
editor/display_folded = true

[node name="SelectionPoint1" type="Position2D" parent="SelectionPoints"]
position = Vector2( 134, 443 )

[node name="SelectionPoint2" type="Position2D" parent="SelectionPoints"]
position = Vector2( 503, 437 )

[node name="SelectionPoint3" type="Position2D" parent="SelectionPoints"]
position = Vector2( 866, 436 )

[node name="Essences" type="Node" parent="."]
editor/display_folded = true

[node name="Essence1" type="Sprite" parent="Essences"]
position = Vector2( 135.18, 535.18 )
scale = Vector2( 1.62327, 1.65789 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Essence2" type="Sprite" parent="Essences"]
position = Vector2( 507.479, 532.964 )
scale = Vector2( 1.62327, 1.65789 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Essence3" type="Sprite" parent="Essences"]
position = Vector2( 867.59, 535.18 )
scale = Vector2( 1.62327, 1.65789 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Spaces" type="Node" parent="."]
editor/display_folded = true

[node name="Space1" type="Position2D" parent="Spaces"]
position = Vector2( 279.667, 286.925 )

[node name="Space2" type="Position2D" parent="Spaces"]
position = Vector2( 521.829, 293.74 )

[node name="Space3" type="Position2D" parent="Spaces"]
position = Vector2( 779.613, 285.54 )

[node name="CombinationPoint" type="Position2D" parent="."]
position = Vector2( 516.842, 158.947 )

[node name="CombinationLight" type="Light2D" parent="."]
visible = false
position = Vector2( 516.316, 158.421 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="FinalResult" type="Sprite" parent="."]
visible = false
position = Vector2( 518.374, 160.381 )
scale = Vector2( 2.47672, 2.20823 )
texture = ExtResource( 2 )
